[package]
name = "pwgen2"
version = "0.2.0"
edition = "2024"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "password generator"
documentation = "https://docs.rs/nbari/latest/pgwen2/"
homepage = "https://docs.io/pgwen2"
repository = "https://github.com/nbari/pwgen2/"
readme = "README.md"
keywords = ["password", "generator", "passgen", "security"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"

[dependencies]
anyhow = "1"
clap = "4.5"
rand = "0.9"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
tokio = { version = "1.43.0", features = ["full"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pwgen2", dest = "/usr/bin/pwgen2", mode = "0755" },
]
